# FCSCD

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  force_calculation_bem_test.cpp  kite_bem.cpp  kite_fem.cpp  plot.py  square_bem.cpp  square_fem.cpp  transmission_bem_test.cpp  transmission_fem_test.cpp
examples/meshes/: CMakeLists.txt  geom.cpp
include/: factors.hpp  force_calculation_bem.hpp  force_calculation_fem.hpp  integration.hpp  transmission_bem.hpp  transmission_fem.hpp  velocity_fields.hpp
report/: refs.bib  report.tex
test/: CMakeLists.txt  convergence_bem_test.cpp  convergence_fem_test.cpp  force_calculation_bem_test.cpp  force_calculation_fem_test.cpp  kernel1_test.cpp  logkernel_test.cpp  transmission_bem_test.cpp  transmission_fem_test.cpp  transmission_plot.py
